<?xml version="1.0"?>
<package>
    <name>lidar_to_lidar_calibration</name>
    <version>0.1.0</version>
    <description>lidar_to_lidar_calibration package</description>
    <maintainer email="bobby.xu@leapting.com">Xu Bobo</maintainer>
    <license>Apache-2.0</license>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>tf2_ros</build_depend>
    <build_depend>pcl_conversions</build_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>dynamic_reconfigure</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>python3-tk</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>tf2_ros</run_depend>
    <run_depend>pcl_conversions</run_depend>
    <run_depend>pcl_ros</run_depend>
    <run_depend>dynamic_reconfigure</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>python3-tk</run_depend>
</package>